--- a/circles.html
+++ b/circles.html
@@ -7,24 +7,14 @@
 	<link rel="stylesheet" href="circles.css">
 
 	<script type="text/paperscript" canvas="myCanvas">
-	// Create a Paper.js Path to draw a line into it:
-	var path = new Path();
-	// Give the stroke a color
-	path.strokeColor = 'black';
-	var start = new Point(100, 100);
-	// Move to start and draw a line from there
-	path.moveTo(start);
-	// Note the plus operator on Point objects.
-	// PaperScript does that for us, and much more!
-	path.lineTo(start + [ 100, -50 ]);
+	function onKeyDown(event) {
+		var maxPoint = new Point(view.size.width, view.size.height);
+		var randomPoint = Point.random();
+		var point = maxPoint*randomPoint;
+		new Path.Circle(point,10).fillColor = "green";
+	}
 
-	var myCircle = new Path.Circle(new Point(100, 70), 50);
-	myCircle.fillColor = 'black';
-
-	var myCircle2 = new Path.Circle(new Point(50,50), 300);
-	myCircle2.fillColor = 'purple';
-
-</script>
+	</script>
 </head>
 <body>
 	<canvas id="myCanvas" resize></canvas>
